<resources>
    <string name="app_name">RamNepali</string>
    <string name="address_melamchi_sindhupalchowk">Address: Melamchi ,Sindhupalchowk</string>
    <string name="gender_male">Gender: Male</string>
    <string name="ram_nepali">Ram Nepali</string>
    <string name="profile">Profile</string>
    <string name="name_ram_nepali">Name: Ram Nepali</string>
    <string name="Education_information">S.E.E Terse Secondary school in 2019.S.L.C or +2 from xavier international college in 2021. I scored 2.90 GPA in my school at terse Secondary School. I scored 3.33 GPA in Xavier international college, and currently, I\'m in my second year at islington college in Mobile Application Development .</string>
    <string name="Button"><![CDATA[>]]></string>
    <string name="Address_information">Address: Sindhupalchowk</string>
    <string name="email_contact">Email:pariyarRam056@gmail.com</string>
    <string name="button">Button</string>
    <string name="contacts_page">Contacts Page</string>
    <string name="description">Description</string>
    <string name="e_mail">E-mail</string>
    <string name="phone_number">Phone number:</string>
    <string name="name">Name:</string>
    <string name="sports_hobby">My first hobby is playing football. Football is the most popular sport in the world and is played in a lot of countries. I started to play football when I was five.</string>
    <string name="coding_hobby">My second hobby is writing coding. coding is the most important IT sector . I started to coding when I was bachelor\'s level.</string>
    <string name="coding">Coding</string>
    <string name="sports">Sports:</string>
    <string name="music_hobby">My third hobby is Musiclising. It has been shown to improve cognitive function and mental health while also providing an outlet for creativity and self-expression.</string>
    <string name="button_hobby"><![CDATA[>]]></string>
    <string name="music">Music</string>
    <string name="todo">TODO</string>
    <string name="image_todo">TODO</string>
    <string name="Age">Age:20 years</string>
    <string name="father_khel_b_nepal">Father :Khel B.Nepal</string>
    <string name="college_info">College: Islington college</string>
    <string name="age">Age:20 years</string>
    <string name="subject">Subject: MAD</string>
    <string name="sub">Subject</string>
    <string name="skills">list programing-skills</string>
    <string name="Skills">Skills</string>
    <string name="adaptability">Adaptability</string>
    <string name="creativity">creativity</string>
    <string name="critical_thinking">critical thinking</string>
    <string name="java">Java</string>
    <string name="python">Python</string>
    <string name="javascript">javascript</string>
    <string name="css">CSS</string>
    <string name="html">HTML</string>
    <string name="sql">SQL</string>
    <string name="communication">Communication</string>
    <string name="problem_solving">Problem solving</string>
    <string name="teamwork">Teamwork</string>
    <string name="list_soft_skills">list soft-skills</string>
    <string name="name_info">Name: Ram Nepali</string>
    <string name="date_of_birth">Date of Birth: 03/01/2002</string>
    <string name="religion_hindu">Religion:Hindu</string>
    <string name="mobile_no">Mobile No: 9803206312</string>
    <string name="educational_qualification">Educational qualification:</string>
    <string name="sent_email">Sent Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="photography_as_a_hobby_is_an_opportunity_to_document_every_part_of_your_journey_no_matter_how_small_it_may_be_my_fourth_hobbies_is_photography">Photography as a hobby is an opportunity to document every part of your journey, no matter how small it may be.my fourth hobbies is photography.</string>
    <string name="current_location_kamalpokhari_ktm">Current location:Kamalpokhari,KTM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>