<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shapes"
    tools:context=".ProfileFragment">

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/shapes"
                    android:minHeight="48dp"
                    app:layout_constraintEnd_toStartOf="@+id/imageButton1"
                    app:layout_constraintHorizontal_bias="0.127"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_menu_24"
                    tools:ignore="ContentDescription,HardcodedText,MissingConstraints,SpeakableTextPresentCheck"
                    android:contentDescription="TODO" />

            <ImageButton
                android:id="@+id/imageButton1"
                android:layout_width="50dp"
                android:layout_height="58dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:background="@drawable/shapes"
                android:contentDescription="@string/image_todo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.919"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_east_24"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/profile"
                android:textSize="25sp"
                app:layout_constraintEnd_toStartOf="@+id/imageButton1"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toEndOf="@+id/imageButton"
                app:layout_constraintTop_toTopOf="parent" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="407dp"
                android:layout_height="647dp"
                android:layout_marginTop="80dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shapes1"
                android:orientation="vertical"
                tools:ignore="MissingConstraints">

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="300dp"
                tools:ignore="MissingConstraints">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="TODO"
                android:scaleType="centerCrop"
                app:srcCompat="@mipmap/ic_ram"
                tools:ignore="ContentDescription,HardcodedText,MissingConstraints" />

            <Button
                android:id="@+id/camera"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:background="@drawable/ic_baseline_photo_camera_24"
                android:backgroundTint="#D5D5D5"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/textView3"
                android:layout_width="228dp"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/ram_nepali"
                android:textSize="25sp"
                tools:ignore="MissingConstraints,RtlSymmetry"
                tools:layout_editor_absoluteX="60dp"
                tools:layout_editor_absoluteY="319dp" />

        </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                tools:ignore="MissingConstraints">

                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/name_info"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="363dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="90dp"
                android:text="@string/gender_male"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="169dp" />

        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/college_info"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="22dp"
                tools:layout_editor_absoluteY="297dp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:text="@string/subject"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="281dp"
                tools:layout_editor_absoluteY="210dp" />
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/Address_information"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="71dp"
                tools:layout_editor_absoluteY="199dp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/Age"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="149dp"
                tools:layout_editor_absoluteY="221dp" />
        </LinearLayout>

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/email_contact"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="169dp"
                tools:layout_editor_absoluteY="266dp" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/current_location_kamalpokhari_ktm"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="27dp"
                tools:layout_editor_absoluteY="524dp" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/educational_qualification"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:layout_width="389dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:justificationMode="inter_word"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/Education_information"
                android:textSize="20sp"
                tools:ignore="UnusedAttribute"
                tools:layout_editor_absoluteX="29dp"
                tools:layout_editor_absoluteY="600dp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
