<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SkillFragment">

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="410dp"
                    android:layout_height="200dp"
                   android:background="@drawable/shapes"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/textView24"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:paddingStart="10dp"
                        android:text="@string/Skills"
                        android:textSize="40sp"
                        tools:ignore="RtlSymmetry" />
                    <TextView
                        android:id="@+id/textView25"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:paddingStart="10dp"
                        android:text="@string/list_soft_skills"

                        android:textSize="50sp"
                        tools:ignore="RtlSymmetry" />

            </LinearLayout>

            <GridLayout
                android:layout_width="410dp"
                android:layout_height="530dp"
                android:layout_gravity="center"
                android:background="@color/white"
                android:columnCount="2"
                android:rowCount="2">


                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="254dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="15dp"
                    android:background="@mipmap/ic_communcation" />




                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="253dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="15dp"
                    android:background="@mipmap/ic_teamworkimage" />

                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="254dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:background="@mipmap/ic_problem_solving" />



                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="253dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="15dp"
                    android:background="@mipmap/ic_creativity"/>



            </GridLayout>

            </LinearLayout>
        </ScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="410dp"
                android:layout_height="200dp"
               android:background="@drawable/shapes"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textView240"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:paddingStart="10dp"
                    android:text="@string/Skills"
                    android:textSize="40sp"
                    tools:ignore="RtlSymmetry" />
                <TextView
                    android:id="@+id/textView250"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/skills"
                    android:textSize="40sp"
                    tools:ignore="RtlSymmetry" />



            </LinearLayout>

            <GridLayout
                android:layout_width="410dp"
                android:layout_height="530dp"
                android:layout_gravity="center"
                android:background="#F3F0F0"
                android:columnCount="2"
                android:rowCount="2">


                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="15dp"
                    android:background="@mipmap/ic_java" />

                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="15dp"
                    android:background="@mipmap/ic_python" />

                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="15dp"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:background="@mipmap/ic_mysql" />

                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="15dp"
                    android:background="@mipmap/ic_html"/>


            </GridLayout>

        </LinearLayout>

    </ScrollView>

        </LinearLayout>
    </HorizontalScrollView>
</FrameLayout>